--- a/secret recipe.htm
+++ b/secret recipe.htm
@@ -15,7 +15,7 @@
 <li>1 cup Walnuts or pecans, chopped (optional)</li>
 <li>2 cups KCC Bittersweet 60% Cacao Baking Chips</li>
 </ul>
-<h1>Baking instructions</h1>
+<h1>Baking instruction</h1>
 <ul>
 <li>Heat oven to 375ºF.</li>
 <li>Stir flour with baking soda and salt; set aside.</li>
